fix: 🎉 Carousel no longer shifts layout before initiating
Huge improvement to Cumulative Layout Shift by preventing the carousel from hiding itself before it is instantiated. The CLS score improves by 2 orders of magnitude.

Possible effects in browsers that don't support aspect-ratio. But other height controls remain in place.

--- a/src/sass/components/_billboards.scss
+++ b/src/sass/components/_billboards.scss
@@ -139,20 +139,28 @@ Slide Styles
 
 .slide {
 	position:relative;
-	max-width: 100%;
-	margin-bottom: 5px;
-	font-size: $font-size-small;
+	width: 100%;
+	height: auto;
+	margin-bottom: .5em;
 	max-height: 362px;
+	font-size: $font-size-small;
 	overflow:hidden;
 
 	.www & {
 		max-height: 620px;
 	}
 
+	
 	img {
+		background-color: #e9e9e9;
 		width:100%;
 		height: auto;
 		z-index: 1;
+		aspect-ratio: 3.12/1;
+
+		.www & {
+			aspect-ratio: 16/9;
+		}
 	}
 
 }
